FIX aligned emote, implicit, and inline messages

--- a/au/src/style_utilities/partials/pages/chat/_chat_messages.sass
+++ b/au/src/style_utilities/partials/pages/chat/_chat_messages.sass
@@ -297,17 +297,13 @@ section .anim-container
 
 
 
-  .emote, .implicit
+  .emote, .implicit, .inline
     .username
       position: relative
-      top: -2px
       left: 3px
-      font-size: 18px
-      text-transform: lowercase
-      font-variant: small-caps
 
       &::before
-        top: -10px
+        top: -13px
         left: -19px
 
     .content
@@ -432,8 +428,6 @@ section .anim-container
       margin-right: 5px
 
       &::before
-        top: -12px
-        left: -19px
         color: hsl(278, 70%, 83%)
         text-shadow: none
 
